fix(sonar): 03011158-a2b0 remediate safe issues